syntax = "proto3";

package v1;

import "tagger/tagger.proto";

option go_package = "./v1;v1_pb";

message ContactListRequest {}

message ContactListResponse {
    message Item {
        int32 id = 1 [(tagger.tags) = "json:\"id\""];
        string username = 2 [(tagger.tags) = "json:\"username\""];
        string avatar = 3 [(tagger.tags) = "json:\"avatar\""];
        string name = 4 [(tagger.tags) = "json:\"name\""];
        string surname = 5 [(tagger.tags) = "json:\"surname\""];
        int32 gender = 6 [(tagger.tags) = "json:\"gender\""];
        string about = 7 [(tagger.tags) = "json:\"about\""];
        int32 is_online = 8 [(tagger.tags) = "json:\"is_online\""];
        int32 folder_id = 9 [(tagger.tags) = "json:\"folder_id\""];
    }

    repeated Item items = 1 [(tagger.tags) = "json:\"items\""];
}

message ContactDetailRequest {
    int32 user_id = 1 [(tagger.tags) = "form:\"user_id\" binding:\"required\""];
}

message ContactDetailResponse {
    int32 id = 1 [(tagger.tags) = "json:\"id\""];
    string username = 2 [(tagger.tags) = "json:\"username\""];
    string avatar = 3 [(tagger.tags) = "json:\"avatar\""];
    string name = 4 [(tagger.tags) = "json:\"name\""];
    string surname = 5 [(tagger.tags) = "json:\"surname\""];
    int32 gender = 6 [(tagger.tags) = "json:\"gender\""];
    string about = 7 [(tagger.tags) = "json:\"about\""];
    int32 friend_status = 8 [(tagger.tags) = "json:\"friend_status\""];
    int32 folder_id = 9 [(tagger.tags) = "json:\"folder_id\""];
    int32 is_bot = 10 [(tagger.tags) = "json:\"is_bot\""];
}

message ContactDeleteRequest {
    int32 friend_id = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactDeleteResponse {}

message ContactChangeGroupRequest {
    int32 user_id = 1 [(tagger.tags) = "form:\"user_id\" binding:\"required\""];
    int32 folder_id = 2 [(tagger.tags) = "form:\"folder_id\""];
}

message ContactChangeGroupResponse {}

message ContactRequestCreateRequest {
    int32 friend_id = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactApplyUnreadNumResponse {
    int64 unread_num = 1 [(tagger.tags) = "json:\"unread_num\""];
}

message ContactRequestCreateResponse {}

message ContactRequestAcceptRequest {
    int32 apply_id = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactRequestAcceptResponse {}

message ContactRequestDeclineRequest {
    int32 apply_id = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactRequestDeclineResponse {}

message ContactRequestListResponse {
    message Item {
        int32 id = 1 [(tagger.tags) = "json:\"id\""];
        int32 user_id = 2 [(tagger.tags) = "json:\"user_id\""];
        int32 friend_id = 3 [(tagger.tags) = "json:\"friend_id\""];
        string username = 4 [(tagger.tags) = "json:\"username\""];
        string avatar = 5 [(tagger.tags) = "json:\"avatar\""];
        string name = 6 [(tagger.tags) = "json:\"name\""];
        string surname = 7 [(tagger.tags) = "json:\"surname\""];
    }

    repeated Item items = 1 [(tagger.tags) = "json:\"items\""];
}

message ContactFolderCreateRequest {
    string name = 1 [(tagger.tags) = "binding:\"required\""];
    int32 sort = 2 [(tagger.tags) = "binding:\"required\""];
}

message ContactFolderCreateResponse{
    int32 id = 1 [(tagger.tags) = "json:\"id\""];
}

message ContactFolderUpdateRequest {
    int32 id = 1 [(tagger.tags) = "binding:\"required\""];
    string name = 2 [(tagger.tags) = "binding:\"required\""];
    int32 sort = 3 [(tagger.tags) = "binding:\"required\""];
}

message ContactFolderUpdateResponse {
    int32 id = 1 [(tagger.tags) = "json:\"id\""];
}

message ContactFolderDeleteRequest {
    int32 id = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactFolderDeleteResponse {
    int32 id = 1 [(tagger.tags) = "json:\"id\""];
}

message ContactFolderSortRequest {
    message Item {
        int32 id = 1 [(tagger.tags) = "binding:\"required\""];
        int32 sort = 2 [(tagger.tags) = "binding:\"required\""];
    }

    repeated Item items = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactFolderSortResponse {}

message ContactFolderListRequest {}

message ContactFolderListResponse {
    message Item {
        int32 id = 1 [(tagger.tags) = "json:\"id\""];
        string name = 2 [(tagger.tags) = "json:\"name\""];
        int32 count = 3 [(tagger.tags) = "json:\"count\""];
        int32 sort = 4 [(tagger.tags) = "json:\"sort\""];
    }

    repeated Item items = 1 [(tagger.tags) = "json:\"items\""];
}

message ContactFolderSaveRequest {
    message Item {
        int32 id = 1 [(tagger.tags) = "binding:\"required\""];
        int32 sort = 2 [(tagger.tags) = "binding:\"required\""];
        string name = 3 [(tagger.tags) = "binding:\"required\""];
    }

    repeated Item items = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactFolderSaveResponse {}
